--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "json-server": "json-server --watch db.json --port 5000",
-    "start-server": "node server.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.55.4",
@@ -35,7 +35,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.11",
     "globals": "^15.9.0",
-    "json-server": "^1.0.0-beta.2",
+    "json-server": "^0.17.4",
     "vite": "^5.4.1"
   }
 }
